--- a/_posts/Spring/2016-10-24-Security.md
+++ b/_posts/Spring/2016-10-24-Security.md
@@ -224,6 +224,11 @@ import java.util.List;
 @Configuration
 public class SecurityConfig {
 
+    private final JwtConfirmFilter jwtConfirmFilter;
+    public SecurityConfig(JwtConfirmFilter jwtConfirmFilter) {
+        this.jwtConfirmFilter = jwtConfirmFilter;
+    }
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
@@ -235,8 +240,8 @@ public class SecurityConfig {
                 .requestMatchers("/user/**").hasAnyRole("USER", "ADMIN")
                 .anyRequest().authenticated()
             )
-            .addFilterBefore(new JwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class)
-            .addFilterBefore(new XssFilter(), JwtAuthenticationFilter.class)
+            .addFilterBefore(jwtConfirmFilter, UsernamePasswordAuthenticationFilter.class)
+            .addFilterBefore(new XssFilter(), JwtConfirmFilter.class)
             .formLogin().disable();
 
         return http.build();
@@ -323,13 +328,14 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 String username = JwtUtil.getUsername(token.substring(7)); // ✅ 사용자 이름 추출
                 List<String> roles = JwtUtil.getRoles(token.substring(7)); // ✅ JWT에서 역할(Role) 추출
 
-                // ✅ 역할 정보를 SecurityContext에 저장
+                // ✅ 역할 정보를 SecurityContext에 저장 role은 new SimpleGrantedAuthority("ROLE_"+claims.get("role")) 형태로 들어가야 된다.
                 List<SimpleGrantedAuthority> authorities = roles.stream()
                         .map(SimpleGrantedAuthority::new)
                         .collect(Collectors.toList());
 
                 User user = new User(username, "", authorities);
-                SecurityContextHolder.getContext().setAuthentication(new JwtAuthenticationToken(user));
+                UsernamePasswordAuthenticationToken usernamePasswordAuthenticationToken = new UsernamePasswordAuthenticationToken(user, null, authorities);
+                SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
 
             } catch (Exception e) {
                 response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Invalid Token");
