--- a/_posts/Spring/2016-10-24-Security.md
+++ b/_posts/Spring/2016-10-24-Security.md
@@ -425,6 +425,17 @@ public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Excepti
 
 ## **5. 컨트롤러에서 권한 기반 분기 처리**
 ### ✅ **`@PreAuthorize`를 활용한 권한 검증**
+
+```java
+@EnableWebSecurity
+@EnableMethodSecurity // ✅ 추가: @PreAuthorize 활성화
+@Configuration
+public class SecurityConfig {
+    ...
+}
+```
+
+
 ```java
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.GetMapping;
