--- a/_posts/Algorithm/2025-04-05-programmers-60058.md
+++ b/_posts/Algorithm/2025-04-05-programmers-60058.md
@@ -8,6 +8,11 @@ tags:     Algorithm
 ---
 # [programmers] 괄호 변환
 
+<!--more-->
+<!-- Table of contents -->
+* this unordered seed list will be replaced by the toc
+{:toc}
+
 [https://school.programmers.co.kr/learn/courses/30/lessons/60058](https://school.programmers.co.kr/learn/courses/30/lessons/60058)
 
 
