--- a/_posts/Algorithm/2025-04-06-programmers-12936.md
+++ b/_posts/Algorithm/2025-04-06-programmers-12936.md
@@ -8,6 +8,11 @@ tags:     Algorithm
 ---
 # [programmers] 줄 서는 방법
 
+<!--more-->
+<!-- Table of contents -->
+* this unordered seed list will be replaced by the toc
+{:toc}
+
 [https://school.programmers.co.kr/learn/courses/30/lessons/12936](https://school.programmers.co.kr/learn/courses/30/lessons/12936)
 
 > `int index = (int)(k / factorial[n-1-i]);` 이부분에 대한 이해가 한참 안되었다. 핵심은 `전체를 나누는 게 아니라, 해당 자리에서 선택지를 몇 개씩 묶어서 나뉘는지에 따라 나눔`이다.  
