--- a/_posts/Algorithm/2025-04-08-programmers-12905.md
+++ b/_posts/Algorithm/2025-04-08-programmers-12905.md
@@ -8,6 +8,11 @@ tags:     Algorithm
 ---
 # [programmers] 가장 큰 정사각형 찾기
 
+<!--more-->
+<!-- Table of contents -->
+* this unordered seed list will be replaced by the toc
+{:toc}
+
 [https://school.programmers.co.kr/learn/courses/30/lessons/12905](https://school.programmers.co.kr/learn/courses/30/lessons/12905)
 
 DP로 풀어야하며, 위, 왼쪽, 왼쪽위의 값중 가장 작은 값에 1을 더해준다.
