--- a/_posts/Algorithm/2025-04-07-programmers-77485.md
+++ b/_posts/Algorithm/2025-04-07-programmers-77485.md
@@ -8,6 +8,11 @@ tags:     Algorithm
 ---
 # [programmers] 행렬 테두리 회전하기
 
+<!--more-->
+<!-- Table of contents -->
+* this unordered seed list will be replaced by the toc
+{:toc}
+
 [https://school.programmers.co.kr/learn/courses/30/lessons/77485](https://school.programmers.co.kr/learn/courses/30/lessons/77485)
 
 ```java
