--- a/_posts/Algorithm/2025-04-10-programmers-172927.md
+++ b/_posts/Algorithm/2025-04-10-programmers-172927.md
@@ -8,6 +8,11 @@ tags:     Algorithm
 ---
 # [programmers] 광물 캐기
 
+<!--more-->
+<!-- Table of contents -->
+* this unordered seed list will be replaced by the toc
+{:toc}
+
 [https://school.programmers.co.kr/learn/courses/30/lessons/172927](https://school.programmers.co.kr/learn/courses/30/lessons/172927)
 
 ```java
