--- a/_posts/Algorithm/2025-04-11-programmers-60057.md
+++ b/_posts/Algorithm/2025-04-11-programmers-60057.md
@@ -1,12 +1,12 @@
 ---
 layout:   post
-title:    "광물 캐기"
-subtitle: "광물 캐기"
+title:    "문자열 압축"
+subtitle: "문자열 압축"
 category: Algorithm
 more_posts: posts.md
 tags:     Algorithm
 ---
-# [programmers] 광물 캐기
+# [programmers] 문자열 압축
 
 <!--more-->
 <!-- Table of contents -->
