--- a/_posts/Algorithm/2025-04-12-programmers-62048.md
+++ b/_posts/Algorithm/2025-04-12-programmers-62048.md
@@ -1,12 +1,12 @@
 ---
 layout:   post
-title:    "문자열 압축"
-subtitle: "문자열 압축"
+title:    "멀쩡한 사각형"
+subtitle: "멀쩡한 사각형"
 category: Algorithm
 more_posts: posts.md
 tags:     Algorithm
 ---
-# [programmers] 문자열 압축
+# [programmers] 멀쩡한 사각형
 
 <!--more-->
 <!-- Table of contents -->
