--- a/_posts/Algorithm/2023-04-14-programmers-42890.md
+++ b/_posts/Algorithm/2023-04-14-programmers-42890.md
@@ -26,7 +26,18 @@ tags:     Algorithm
   
 이게 n개 있으니까 가능한 조합 수 = 2 × 2 × 2 × ... (n번) = 2^n  
 여기에 공집합(아무것도 포함하지 않은 조합)은 빼줘야 하니 2^n-1이 된다.  
+  
+4개의 컬럼일 경우 1 ~ 15 까지의 조합의 수가 나오는데 2진수로 표현할 경우 각자리에 1이 올때 해당 값이 포함되는 조합이 된다.  
+이걸이용해 비트 연산을해 최소성을 확인할 수 있다.  
 
+```java
+int key = 0110;   // 10
+int set = 1110;   // 14
+(key & set) = 0110
+
+// 결과(key는 set의 부분집합이니까 → 이건 후보키가 될 수 없음 (최소성 위반))
+(key & set) == key // true
+```
 
 ```java
 import java.util.*;
