--- a/_posts/Spring/2023-08-12-Reactive.md
+++ b/_posts/Spring/2023-08-12-Reactive.md
@@ -15,6 +15,75 @@ tags:     Spring
 
 <!-- text -->
 
+## 리액티브 시스템이란?
+> 변화에 민감하게 반응하고(Responsive), 실패에 강하며(Resilient), 부하에 따라 유연하게 확장되고(Elastic), 메시지 기반(Message Driven)으로 구성된 시스템을 말한다.  
+(즉, 안정적이고 유연하며 빠른 응답을 보장하는 현대적인 시스템 설계 방식)
+
+## 리액티브 선언문
+> 리액티브 선언문은 이랙티브라는 용어의 의미를 올바르게 정의하기 위해 노력하는 사람들이 만든 리액티브 시스템 구축을 위한 일종의 설계 원칙
+
+![img.png](img.png)
+
+| 항목         |간단 정의|예시 또는 관련 특성|
+|------------|---|---|
+| VALUE (가치) | 우리가 리액티브 시스템에서 얻고자 하는 최종 목표 | Responsive (응답성) – 빠르고 안정적인 응답|
+ | FORM (형식)  | 그 가치를 달성하기 위한 시스템의 구조적 성질 | Elastic (탄력성), Resilient (회복성)|
+ | MEANS (수단) | 형식을 구현하기 위한 구체적인 실행 수단 | Message Driven (메시지 기반) 아키텍처|
+
+## 리액티브 프로그래밍의 특징
+- `선언형 프로그래밍 방식` : 동작을 어떻게 수행할지를 명령하지 않고, 무엇을 할지만 선언함
+  - → 코드가 간결하고 의도를 명확하게 표현
+
+```java
+// 명령형(for문을 돌아라, A로 시작되는걸 찾아서 넣어라)
+List<String> result = new ArrayList<>();
+for(String s : list) {
+    if(s.startsWith("A")) result.add(s);
+}
+
+// 선언형(A로 시작되는걸 필터링 한다)
+List<String> result = list.stream()
+        .filter(s -> s.startsWith("A"))
+        .toList();
+```
+
+- `데이터 스트림(data streams)` : 데이터가 지속적으로 흐름
+  - → 시간의 흐름에 따라 발생하는 데이터를 처리
+
+```java
+// 예시 : 센서에서 실시간으로 온도가 들어오는 경우, Flux<Integer> 로 1초마다 온도 값 수신
+Flux.interval(Duration.ofSeconds(1))
+    .map(tick -> getTemperatureFromSensor())
+    .subscribe(temp -> System.out.println("현재 온도: " + temp));
+```
+
+- `변화의 전파(propagation of change)` : 데이터에 변화가 생기면 자동으로 관련된 연산에 전파
+  - → 이벤트 기반 반응 처리 가능
+
+```java
+// 예시 : 사용자의 이름이 바뀌면, UI 화면에 자동으로 반영
+BehaviorSubject<String> username = BehaviorSubject.createDefault("Alice");
+
+username.subscribe(name -> System.out.println("이름 변경됨: " + name));
+
+username.onNext("Bob"); // onNext를 통해 'Bob' 입력시 '이름 변경됨: Bob' 내용이 자동으로 출력된다.
+```
+
+## 리액티브 프로그래밍 코드 구성
+
+| 구성 요소       | 역할 요약|
+|-------------|---|
+| Publisher   | 데이터를 발행함 (생산자 역할)|
+ | Subscriber  | 데이터를 구독하고 소비함 (소비자 역할)|
+ | Data Source | Publisher에 입력되는 실제 원천 데이터|
+ | Operator    | Publisher → Subscriber 사이에서 데이터 변환/가공|
+
+```java
+Flux<Integer> source = Flux.range(1, 5);              // Data Source + Publisher
+Flux<Integer> mapped = source.map(i -> i * 10);       // Operator(데이터를 가공: 1 → 10, 2 → 20 ...)
+mapped.subscribe(System.out::println);                // Subscriber(가공된 데이터를 소비)
+```
+
 ## 리액티브와 블로킹 방식의 차이 예제
 - 블로킹 방식:
   - 요청 A가 들어옴 → 스레드 1이 할당됨.
