--- a/_posts/Spring/2023-08-12-Reactive.md
+++ b/_posts/Spring/2023-08-12-Reactive.md
@@ -305,23 +305,196 @@ class MySubscriber implements Subscriber<Integer> {
 >   - 스프링과의 통합: Reactor는 스프링 프레임워크와 긴밀하게 통합되어 있으며, RxJava보다 스프링 프로젝트에서 더 많이 사용된다.
 
 
-## 리액티브와 블로킹 방식의 차이 예제
-- 블로킹 방식:
-    - 요청 A가 들어옴 → 스레드 1이 할당됨.
-    - 요청 A가 DB 작업으로 1초 동안 블로킹 → 스레드 1이 대기.
-    - 요청 B가 들어옴 → 스레드 2가 할당됨.
-    - 스레드 풀의 크기가 고갈되면 새로운 요청은 대기 상태로 들어감.
-- 리액티브 방식:
-    - 요청 A가 들어옴 → 스레드 1이 할당되어 작업 시작.
-    - 요청 A가 DB 작업으로 1초 동안 대기 → 스레드 1은 대기하지 않고 다른 요청 B 처리로 전환.
-    - 요청 A의 DB 작업이 완료되면 이벤트가 발생 → 스레드가 다시 작업 재개.
 
-## 리액티브 방식의 장점과 단점
-- 장점:
-    - 높은 처리량: 소수의 스레드로도 많은 요청 처리 가능.
-    - 자원 효율적: 스레드 풀을 무작정 늘리지 않아도 됨.
-    - 적합한 사용 사례: 외부 API 호출, DB 액세스 등 I/O 지연이 많은 애플리케이션.
-- 단점:
-    - 복잡한 디버깅: 콜백 체인과 비동기 코드로 인해 디버깅과 오류 추적이 어렵습니다.
-    - 학습 곡선: 기존의 동기식 방식과 비교하여 배우기 더 어려움.
-    - 특정 작업에는 부적합: CPU 집약적인 작업(예: 데이터 처리, 복잡한 계산)에는 큰 이점이 없음.
+## Blocking I/O
+> Blocking I/O는 I/O 작업 완료까지 스레드를 대기시키기 때문에 CPU 낭비, 컨텍스트 스위칭 비용, 메모리 오버헤드, 스레드 풀 지연 등 다양한 성능 문제가 발생한다.
+
+### 1. Blocking I/O란?
+- 외부 장치(디스크, 네트워크 등)로부터 데이터를 읽거나 쓸 때 **I/O 작업이 끝날 때까지 스레드가 대기**하는 방식이다.
+- 예시: 파일 읽기, DB 조회, 네트워크 통신.
+
+### 2. Blocking I/O 문제점
+- **CPU 낭비**: 스레드가 대기하는 동안 CPU는 다른 일을 못 한다.
+- **Context Switching 비용**: 많은 스레드가 대기하면 전환 비용이 커져 성능이 저하된다.
+- **과도한 메모리 사용**: 스레드마다 Stack 메모리가 필요해서 메모리 소모가 커진다.
+- **스레드 풀 한계**: 스레드 풀이 있어도 요청이 몰리면 풀에 스레드가 부족해져 추가 지연이 발생할 수 있다.
+
+### 3. Context Switching이란?
+- CPU가 실행 중인 프로세스를 멈추고 다른 프로세스를 실행하기 위해 **PCB(Process Control Block)** 저장/복원하는 과정.
+- 전환(스위칭)마다 시간이 들고, 이게 많아지면 **CPU 전체 성능이 하락**한다.
+
+### 4. 메모리/응답 문제
+- 스레드 하나당 기본 스택 메모리 필요(예: 64비트 JVM 기본 1MB).
+- 수천~수만 개 스레드가 생성되면 **메모리 오버헤드**가 발생할 수 있다.
+- 스레드 풀이 있어도, 풀에 남은 스레드가 없으면 **추가 요청이 대기**하게 되어 응답 지연이 생긴다.
+
+---
+
+## Non-Blocking I/O 핵심 요약
+> Non-Blocking I/O는 스레드가 작업 완료를 기다리지 않고 즉시 다음 요청을 처리해 CPU와 메모리를 효율적으로 사용하지만, CPU 작업량이 많거나 Blocking 요소가 섞이면 이점을 살리기 어렵다.
+
+## 1. Non-Blocking I/O란?
+- Blocking I/O와 달리, **작업 완료를 기다리지 않고** 스레드가 **바로 다음 작업**을 처리할 수 있다.
+- 요청한 스레드는 **차단(blocking)되지 않고 즉시 반환**된다.
+
+## 2. Non-Blocking I/O 특징
+- **작업 스레드 종료 여부와 관계없이** 다음 요청을 처리할 수 있다.
+- **CPU 대기 시간**과 **메모리 사용량**이 줄어든다.
+- **적은 수의 스레드**로 **많은 요청**을 효율적으로 처리할 수 있다.
+- Blocking I/O에 비해 **멀티스레딩 오버헤드**(context switching, 메모리 낭비)가 거의 없다.
+
+## 3. Non-Blocking I/O 한계
+- **CPU 사용량이 많은 작업**이 포함되면 오히려 성능이 떨어질 수 있다.
+- 요청 처리 흐름에 **Blocking I/O가 끼어 있으면** Non-Blocking의 이점을 살리기 어렵다.
+
+## 4. 완전한 Non-Blocking I/O (Fully Non-Blocking)
+- 네트워크 통신뿐 아니라 **DB 조회** 등도 모두 Non-Blocking이어야 진정한 Non-Blocking 효과를 볼 수 있다.
+- 하나라도 Blocking 작업이 끼면 **스레드 차단(병목)**이 발생할 수 있다.
+
+---
+
+## 📚 Spring Framework에서의 Blocking I/O vs Non-Blocking I/O
+> Spring MVC는 요청마다 스레드가 대기해서 느려지고, Spring WebFlux는 스레드 차단 없이 동시에 많은 요청을 빠르게 처리한다.
+
+### Spring MVC (Blocking I/O)
+
+- **요청당 스레드가 대기**한다. (요청 처리 완료될 때까지 멈춤)
+- 많은 요청 → **CPU 낭비**, **메모리 과다 사용**, **응답 지연**.
+- `RestTemplate` 사용 → 요청하고 결과 받을 때까지 기다림.
+
+### Spring WebFlux (Non-Blocking I/O)
+
+- **요청 후 스레드는 바로 반환**된다. (다음 요청 바로 처리)
+- 적은 스레드로 많은 요청을 **효율적으로 처리**.
+- `WebClient` 사용 → 비동기로 요청하고, 응답도 비동기로 처리(`Mono`, `Flux`).
+
+---
+
+### 2-1. Blocking I/O 예시 (Spring MVC)
+
+**[본사 서버 Controller]**
+
+```java
+@RestController
+public class HeadOfficeController {
+    @GetMapping("/v1/books/{id}")
+    public ResponseEntity<Book> getBook(@PathVariable Long id) {
+        Book book = restTemplate.getForEntity("http://localhost:7070/v1/books/" + id, Book.class).getBody();
+        return ResponseEntity.ok(book);
+    }
+}
+```
+
+**[지점 서버 Controller]**
+
+```java
+@RestController
+public class BranchOfficeController {
+    @GetMapping("/v1/books/{id}")
+    public ResponseEntity<Book> getBook(@PathVariable Long id) throws InterruptedException {
+        Thread.sleep(5000); // 5초 대기
+        return ResponseEntity.ok(bookMap.get(id));
+    }
+}
+```
+
+**[클라이언트]**
+
+```java
+for (int i = 1; i <= 5; i++) {
+    Book book = restTemplate.getForEntity("http://localhost:8080/v1/books/" + i, Book.class).getBody();
+    log.info("Book name: {}", book.getName());
+}
+```
+
+- 요청 하나 완료될 때까지 다음 요청 **못 보냄** → 총 25초 걸림
+
+---
+
+### 2-2. Non-Blocking I/O 예시 (Spring WebFlux)
+
+**[본사 서버 Controller]**
+
+```java
+@RestController
+public class ReactiveHeadOfficeController {
+    @GetMapping("/v1/books/{id}")
+    public Mono<Book> getBook(@PathVariable Long id) {
+        return WebClient.create()
+            .get()
+            .uri("http://localhost:5050/v1/books/" + id)
+            .retrieve()
+            .bodyToMono(Book.class);
+    }
+}
+```
+
+**[지점 서버 Controller]**
+
+```java
+@RestController
+public class ReactiveBranchOfficeController {
+    @GetMapping("/v1/books/{id}")
+    public Mono<Book> getBook(@PathVariable Long id) throws InterruptedException {
+        Thread.sleep(5000); // 5초 대기 (Blocking 남아있음)
+        return Mono.just(bookMap.get(id));
+    }
+}
+```
+
+**[클라이언트]**
+
+```java
+for (int i = 1; i <= 5; i++) {
+    WebClient.create()
+        .get()
+        .uri("http://localhost:6060/v1/books/" + i)
+        .retrieve()
+        .bodyToMono(Book.class)
+        .subscribe(book -> log.info("Book name: {}", book.getName()));
+}
+```
+
+- 요청을 **동시에 보냄** → 전체 5초 만에 끝남
+
+
+## Non-Blocking I/O 방식이 적합한 시스템
+
+### 1. Spring WebFlux를 무조건 써야 할까?
+- 무조건 Spring MVC → WebFlux로 바꿀 필요는 없음.
+- **적합한 상황**에만 WebFlux를 쓰는 게 현실적.
+- 고려할 것:
+    - **학습 난이도**가 WebFlux가 훨씬 높음.
+    - **리액티브 프로그래밍 경험** 있는 인력 필요.
+    - 무턱대고 도입하면 오히려 복잡성, 유지보수 비용 증가.
+
+### 2. WebFlux를 고려해야 할 상황
+
+### 2.1 대량의 요청 트래픽이 발생하는 시스템
+- Blocking I/O 기반 MVC로 감당이 안 될 정도로 **요청 트래픽이 많다면** WebFlux 고려.
+- 서버 확장 없이 **적은 컴퓨팅 자원**으로 많은 요청을 처리할 수 있음.
+
+### 2.2 마이크로 서비스 기반 시스템
+- 마이크로서비스 간에는 **서로 끊임없이 I/O 통신**이 발생.
+- 이때 Blocking I/O로 인해 통신 지연이 생기면 전체 시스템에 악영향.
+- **Non-Blocking I/O 기술이 필수**에 가까움.
+
+### 2.3 스트리밍 또는 실시간 시스템
+- 데이터 스트림(예: 실시간 채팅, 주식 데이터, IoT 데이터) 처리에 유리.
+- WebFlux는 **무한 데이터 스트림**을 효율적으로 비동기로 처리할 수 있다.
+
+## 3. WebFlux를 도입할 때 주의사항
+
+- 학습 곡선이 높다: Spring MVC보다 **학습 난이도**가 확연히 높음.
+- 개발자 확보가 어렵다: **리액티브 프로그래밍 경험자**가 많지 않음.
+- 무턱대고 도입하면 오히려 **복잡도, 리팩터링 비용**이 늘어날 수 있음.
+- 기존 MVC처럼 쉽게 유지보수하기 어렵다.
+
+# 최종 정리
+> 요청량이 많거나 실시간 데이터 처리가 필요한 경우 WebFlux를 고려하고, 단순하고 안정적인 개발에는 여전히 Spring MVC가 적합하다.
+
+| 상황 | WebFlux 적합 여부 |
+|:---|:---|
+| 소규모, 요청량 적음 | ❌ Spring MVC로 충분 |
+| 대규모 트래픽, 실시간 스트림, 마이크로서비스 | ✅ WebFlux 강력 추천 |
+| 개발자 경험 부족 | ❌ WebFlux 도입 신중히 검토 |
