--- a/_posts/Spring/2023-08-12-Reactive.md
+++ b/_posts/Spring/2023-08-12-Reactive.md
@@ -333,21 +333,21 @@ class MySubscriber implements Subscriber<Integer> {
 ## Non-Blocking I/O 핵심 요약
 > Non-Blocking I/O는 스레드가 작업 완료를 기다리지 않고 즉시 다음 요청을 처리해 CPU와 메모리를 효율적으로 사용하지만, CPU 작업량이 많거나 Blocking 요소가 섞이면 이점을 살리기 어렵다.
 
-## 1. Non-Blocking I/O란?
+### 1. Non-Blocking I/O란?
 - Blocking I/O와 달리, **작업 완료를 기다리지 않고** 스레드가 **바로 다음 작업**을 처리할 수 있다.
 - 요청한 스레드는 **차단(blocking)되지 않고 즉시 반환**된다.
 
-## 2. Non-Blocking I/O 특징
+### 2. Non-Blocking I/O 특징
 - **작업 스레드 종료 여부와 관계없이** 다음 요청을 처리할 수 있다.
 - **CPU 대기 시간**과 **메모리 사용량**이 줄어든다.
 - **적은 수의 스레드**로 **많은 요청**을 효율적으로 처리할 수 있다.
 - Blocking I/O에 비해 **멀티스레딩 오버헤드**(context switching, 메모리 낭비)가 거의 없다.
 
-## 3. Non-Blocking I/O 한계
+### 3. Non-Blocking I/O 한계
 - **CPU 사용량이 많은 작업**이 포함되면 오히려 성능이 떨어질 수 있다.
 - 요청 처리 흐름에 **Blocking I/O가 끼어 있으면** Non-Blocking의 이점을 살리기 어렵다.
 
-## 4. 완전한 Non-Blocking I/O (Fully Non-Blocking)
+### 4. 완전한 Non-Blocking I/O (Fully Non-Blocking)
 - 네트워크 통신뿐 아니라 **DB 조회** 등도 모두 Non-Blocking이어야 진정한 Non-Blocking 효과를 볼 수 있다.
 - 하나라도 Blocking 작업이 끼면 **스레드 차단(병목)**이 발생할 수 있다.
 
@@ -470,27 +470,27 @@ for (int i = 1; i <= 5; i++) {
 
 ### 2. WebFlux를 고려해야 할 상황
 
-### 2.1 대량의 요청 트래픽이 발생하는 시스템
+#### 2.1 대량의 요청 트래픽이 발생하는 시스템
 - Blocking I/O 기반 MVC로 감당이 안 될 정도로 **요청 트래픽이 많다면** WebFlux 고려.
 - 서버 확장 없이 **적은 컴퓨팅 자원**으로 많은 요청을 처리할 수 있음.
 
-### 2.2 마이크로 서비스 기반 시스템
+#### 2.2 마이크로 서비스 기반 시스템
 - 마이크로서비스 간에는 **서로 끊임없이 I/O 통신**이 발생.
 - 이때 Blocking I/O로 인해 통신 지연이 생기면 전체 시스템에 악영향.
 - **Non-Blocking I/O 기술이 필수**에 가까움.
 
-### 2.3 스트리밍 또는 실시간 시스템
+#### 2.3 스트리밍 또는 실시간 시스템
 - 데이터 스트림(예: 실시간 채팅, 주식 데이터, IoT 데이터) 처리에 유리.
 - WebFlux는 **무한 데이터 스트림**을 효율적으로 비동기로 처리할 수 있다.
 
-## 3. WebFlux를 도입할 때 주의사항
+### 3. WebFlux를 도입할 때 주의사항
 
 - 학습 곡선이 높다: Spring MVC보다 **학습 난이도**가 확연히 높음.
 - 개발자 확보가 어렵다: **리액티브 프로그래밍 경험자**가 많지 않음.
 - 무턱대고 도입하면 오히려 **복잡도, 리팩터링 비용**이 늘어날 수 있음.
 - 기존 MVC처럼 쉽게 유지보수하기 어렵다.
 
-# 최종 정리
+## 최종 정리
 > 요청량이 많거나 실시간 데이터 처리가 필요한 경우 WebFlux를 고려하고, 단순하고 안정적인 개발에는 여전히 Spring MVC가 적합하다.
 
 | 상황 | WebFlux 적합 여부 |
@@ -498,3 +498,155 @@ for (int i = 1; i <= 5; i++) {
 | 소규모, 요청량 적음 | ❌ Spring MVC로 충분 |
 | 대규모 트래픽, 실시간 스트림, 마이크로서비스 | ✅ WebFlux 강력 추천 |
 | 개발자 경험 부족 | ❌ WebFlux 도입 신중히 검토 |
+
+
+
+## 4.1 함수형 인터페이스 (Functional Interface)
+> **"하나의 추상 메서드만 가진 인터페이스로, Java 8부터 람다식을 사용할 수 있게 해주는 핵심 개념"**
+
+- **함수형 프로그래밍**의 기본 개념을 Java에서도 사용할 수 있게 **Java 8**부터 **함수형 인터페이스**가 도입되었다.
+- **함수형 인터페이스**란, "**단 하나의 추상 메서드만 가지는 인터페이스**"를 의미한다.
+- 기존 인터페이스와 구분되는 이유는, 오직 하나의 메서드만 정의되어 있어야 하며, 이 덕분에 **람다 표현식**(Lambda Expression)으로 간결하게 사용할 수 있다.
+- `@FunctionalInterface` 어노테이션을 붙이면 함수형 인터페이스임을 명시적으로 선언할 수 있다. (붙이지 않아도 되지만, 붙이면 컴파일 타임에 체크 가능)
+- 예시로 자주 등장하는 **Comparator** 인터페이스:
+    - `int compare(T o1, T o2);` 하나의 추상 메서드를 가진다.
+    - 추가 메서드들 (`reversed()`, `thenComparing()`)은 **default 메서드**라서 함수형 인터페이스 요건을 해치지 않는다.
+- **Java 8 이전**에도 인터페이스는 있었지만, **람다식**을 사용하려면 함수형 인터페이스가 필요해서 별도로 구분한 것이다.
+- 람다 표현식을 쓰면 코드가 훨씬 간결해지고, 입력된 객체를 처리하는 방식을 더 명확하고 직관적으로 표현할 수 있다.
+
+좋아, 이번엔 **보내준 예시 코드**까지 꼭 필요한 부분만 요약해서 정리할게:
+
+---
+
+### 예시
+
+#### 1. Java 8 이전 방식 (익명 클래스 사용)
+- `Comparator` 인터페이스를 **익명 내부 클래스**로 구현.
+- **복잡하고 길다**는 단점이 있다.
+
+```java
+        Collections.sort(cryptoCurrencies, new Comparator<CryptoCurrency>() {
+    @Override
+    public int compare(CryptoCurrency c1, CryptoCurrency c2) {
+        return c1.getUnit().name().compareTo(c2.getUnit().name());
+    }
+});
+```
+
+#### 2. Java 8 이후 (람다 표현식 사용)
+- **람다 표현식**을 이용해 **한 줄**로 정리.
+- 훨씬 **간결하고 읽기 쉬움**.
+
+```java
+Collections.sort(cryptoCurrencies,
+    (c1, c2) -> c1.getUnit().name().compareTo(c2.getUnit().name())
+);
+```
+
+#### 핵심 요점
+- `Comparator`는 **하나의 추상 메서드(compare)**만 있어서 람다로 바로 표현 가능.
+- Java 8부터는 **람다식** 덕분에 **코드가 짧아지고** **가독성**이 좋아졌다.
+- 이걸 가능하게 하는 기반이 바로 **함수형 인터페이스**.
+
+
+## 4.2 람다 표현식 (Lambda Expression) 요약
+
+- **람다 표현식**은 "함수를 값처럼 전달하는 간결한 문법"이다.
+- **Javascript, Scala** 등은 함수 자체를 값으로 넘길 수 있고, Java는 **Java 8**부터 람다 표현식으로 이를 지원하게 됐다.
+- 기존에는 **익명 클래스**를 만들어야 했던 것을 람다로 간단히 표현할 수 있다.
+
+### 예시
+
+#### 1. Comparator를 람다로 정리
+```java
+Collections.sort(cryptoCurrencies,
+    (c1, c2) -> c1.getUnit().name().compareTo(c2.getUnit().name())
+);
+```
+- Comparator 구현을 **람다**로 한 줄 처리.
+
+#### 2. Stream API와 람다 활용
+```java
+cryptoCurrencies.stream()
+    .filter(cc -> cc.getUnit() == CurrencyUnit.BTC)
+    .map(cc -> cc.getName() + "(비트코인)")
+    .forEach(System.out::println);
+```
+- `filter`, `map`, `forEach` 모두 **람다**로 구현.
+- **스트림 + 람다** 조합으로 간결한 데이터 처리 가능.
+
+#### 추가 핵심 이론
+
+- **람다 캡처링**: 람다 안에서는 외부 변수를 사용할 수 있는데, 이때 그 변수는 **사실상 final**이어야 한다. (값 변경 불가)
+- **JVM 언어**(Scala 등)에서도 함수 자체를 값으로 다루기 쉽게 하기 위해 람다를 사용한다.
+
+#### 최종 요약 문장
+> "람다 표현식은 하나의 추상 메서드를 가진 인터페이스를 구현할 때, 함수처럼 코드를 간결하게 작성하고, 외부 변수를 안전하게 사용할 수 있게 한다."
+
+
+좋아, 이번엔 보내준 **메서드 레퍼런스 (Method Reference)** 부분도 예시 포함해서 짧고 핵심만 정리해줄게:
+
+---
+
+## 4.3 메서드 레퍼런스 (Method Reference) 요약
+> "메서드 레퍼런스는 람다식을 더 간단히 `::` 기호로 표현하는 방법이며, static, 인스턴스 메서드, 객체 메서드, 생성자 모두 참조할 수 있다."
+
+- **메서드 레퍼런스**란, **람다 표현식을 더 간단하게** 작성하는 방법.
+- 기존 `(Car car) -> car.getCarName()`을 `Car::getCarName` 처럼 표현.
+- 메서드 레퍼런스를 쓰려면 `::` 기호를 사용한다.
+
+
+### 메서드 레퍼런스 4가지 유형
+
+| 유형 | 설명 | 예시 |
+|:---|:---|:---|
+| 1. `ClassName::staticMethod` | 클래스의 static 메서드 참조 | `StringUtils::upperCase` |
+| 2. `ClassName::instanceMethod` | 클래스의 인스턴스 메서드 참조 | `String::toUpperCase` |
+| 3. `object::instanceMethod` | 객체의 인스턴스 메서드 참조 | `calculator::getTotalPayment` |
+| 4. `ClassName::new` | 생성자 참조 (new) | `PaymentCalculator::new` |
+
+### 예시 요약
+
+- **static 메서드 참조**
+```java
+map(StringUtils::upperCase);
+```
+
+- **instance 메서드 참조 (클래스명 기준)**
+```java
+map(String::toUpperCase);
+```
+
+- **instance 메서드 참조 (객체 기준)**
+```java
+map(calculator::getTotalPayment);
+```
+
+- **new 생성자 참조**
+```java
+map(PaymentCalculator::new);
+```
+
+## 4.4 함수 디스크립터 요약
+
+- **함수 디스크립터**는 "함수형 인터페이스의 입력과 출력 타입"을 정리한 것.
+- **람다 표현식**을 사용할 때, 해당 인터페이스가 어떤 파라미터와 반환값을 갖는지 알아야 한다.
+- 주로 Java 8에서 도입된 함수형 인터페이스와 매칭된다.
+
+
+### 주요 함수형 인터페이스 정리
+
+| 함수형 인터페이스 | 함수 디스크립터 | 설명 |
+|:---|:---|:---|
+| Predicate\<T\> | T → boolean | 조건 판단 (ex. 필터링) |
+| Consumer\<T\> | T → void | 데이터 소비 (ex. 저장, 출력) |
+| Function\<T, R\> | T → R | 데이터 변환 (ex. 매핑) |
+| Supplier\<T\> | () → T | 데이터 제공 (ex. 랜덤 값 생성) |
+| BiPredicate\<T, U\> | (T, U) → boolean | 두 입력 비교 |
+| BiConsumer\<T, U\> | (T, U) → void | 두 입력 소비 |
+| BiFunction\<T, U, R\> | (T, U) → R | 두 입력 변환 |
+
+- **Predicate**: 조건에 맞는 데이터만 필터링 (e.g., 가격 500 이상만)
+- **Consumer**: 특정 동작 수행 (e.g., 저장, 출력)
+- **Function**: 입력을 결과로 변환 (e.g., 가격 계산)
+- **Supplier**: 아무 입력 없이 값을 공급 (e.g., 랜덤 단어 제공)
