--- a/_posts/Algorithm/2023-04-20-programmers-388353.md
+++ b/_posts/Algorithm/2023-04-20-programmers-388353.md
@@ -1,12 +1,12 @@
 ---
 layout:   post
-title:    "요격 시스템"
-subtitle: "요격 시스템"
+title:    "지게차와 크레인"
+subtitle: "지게차와 크레인"
 category: Algorithm
 more_posts: posts.md
 tags:     Algorithm
 ---
-# [programmers] 요격 시스템
+# [programmers] 지게차와 크레인
 
 <!--more-->
 <!-- Table of contents -->
