--- a/_posts/Spring/2023-08-13-Reactor.md
+++ b/_posts/Spring/2023-08-13-Reactor.md
@@ -15,6 +15,51 @@ tags:     Spring
 
 <!-- text -->
 
+## Reactor란?
+> 리액티브 스트림즈의 구현체인 Reactor는 리액티브 프로그래밍을 위한 라이브러리라고 정의 할 수 있다.  
+> Reactor Core 라이브러리는 Spring WebFlux 프레임워크에 라이브러리로 포함되어 있어 실습시 dependency 설정을 해줘야 한다.
+
+### 틀징
+
+|번호 | 특징 이름 | 설명|
+|---|---|---|
+|1 | Reactive Streams | 리액티브 스트림 표준을 구현한 리액터 라이브러리. 비동기 스트림 처리 방식.|
+|2 | Non-Blocking | JVM 위에서 비동기 논블로킹으로 애플리케이션을 만들기 위한 핵심 기술.|
+|3 | Java's functional API | Java8 이상의 함수형 API를 통해 Publisher와 Subscriber 간 상호작용을 구현.|
+|4 | Flux(N) | 여러 개의 데이터를 emit하는 타입. 0개 이상 다수의 데이터 처리.|
+|5 | Mono(1) | 하나의 데이터를 emit하는 타입. 단일 데이터 처리 전용.|
+|6 | Well-suited for microservices | 마이크로서비스에 적합. Non-Blocking I/O 방식으로 높은 처리량을 지원.|
+|7 | Backpressure-ready network | Subscriber가 소비할 수 있는 만큼 데이터 흐름을 조절(Backpressure 지원).|
+
+
+
+## Hello Reactor 코드로 보는 Reactor 구성 요소
+> Hello Reactor 예제는 "Publisher가 데이터 제공 → Operator로 데이터 가공 → Subscriber가 소비"하는 Reactor의 기본 구조를 단순하게 보여준다.
+
+```java
+public class Example1 {
+    public static void main(String[] args) {
+        Flux<String> sequence = Flux.just("Hello", "Reactor");
+        sequence.map(data -> data.toLowerCase())
+                .subscribe(data -> System.out.println(data));
+    }
+}
+```
+
+| 구성 요소 | 설명 |
+|:---|:---|
+| `Flux.just("Hello", "Reactor")` | 데이터 소스를 생성하는 Publisher. 여러 데이터를 방출할 수 있다. |
+| `.map(data -> data.toLowerCase())` | 데이터 변환 처리 (Operator). 데이터를 소문자로 변환. |
+| `.subscribe(System.out::println)` | 데이터 소비(Subscriber). 변환된 데이터를 출력. |
+
+**Reactor 흐름 3단계**
+1. **Publisher 생성 (데이터 소스 제공)**  
+   → `Flux.just()`
+2. **Operator 적용 (데이터 변환/처리)**  
+   → `.map()`
+3. **Subscriber 등록 (데이터 소비)**  
+   → `.subscribe()`
+
 ## Reactor 용어 정의
 - Publisher : 발행자, 게시자, 생산자, 방출자(Emitter)
 - Subscriber : 구독자, 소비자
