--- a/_posts/Algorithm/2023-04-22-programmers-12923.md
+++ b/_posts/Algorithm/2023-04-22-programmers-12923.md
@@ -39,7 +39,7 @@ class Solution {
                 if(num / i <= 10000000){ // 문제의 조건 '1부터 10,000,000까지의 숫자'
                     return num / i;
                 }else{
-                    result = Math.max(result, i); // 조건이 넘어갈 경우 가장 큰 약수를 추출한다(i 는 Math.sqrt(num)으로 최대 31,622
+                    result = i; // 조건이 넘어갈 경우 가장 큰 약수를 추출한다(i 는 Math.sqrt(num)으로 최대 31,622
                 }
             }
         }
