--- a/_posts/Spring/2023-08-15-Sinks.md
+++ b/_posts/Spring/2023-08-15-Sinks.md
@@ -16,8 +16,64 @@ tags:     Spring
 <!-- text -->
 
 # Sinks
+> Reactor의 `Sinks`는 **리액티브 스트림의 Signal을 명시적으로 프로그래밍 방식으로 전송할 수 있는 도구**. `generate`, `create` 등의 Operator 방식과 달리, 멀티스레드 환경에서도 **스레드 안정성**을 보장할 수 있어 고급 상황에서 유용하다.  
 > Sinks는 Reactor 3.4 버전에서 도입된 새로운 기능으로, Publisher의 일종으로 데이터를 발행하고 구독할 수 있는 유연한 방법을 제공 한다.  
 > Sinks는 Thread-Safe하게 signal을 발생 시킨다.
+
+### `create()` Operator 방식
+
+#### 개념
+- `Flux.create()` 내에서 `sink.next(...)` 호출로 Signal 전송
+- 작업 수행 → 결과 처리 → Subscriber 전달
+
+#### 예시
+```java
+Flux.create(sink -> {
+    IntStream.range(1, 6).forEach(n -> sink.next(doTask(n)));
+})
+.subscribeOn(Schedulers.boundedElastic())
+.publishOn(Schedulers.parallel())
+.map(...).subscribe(...);
+```
+
+#### 특징
+- 단계별로 실행되는 스레드가 다름
+    - `subscribeOn`: 생성
+    - `map`, `subscribe`: publishOn 별도 스레드
+- 결과적으로 **3개의 스레드** 사용
+
+### `Sinks` 방식
+
+#### 개념
+- `Sinks.many().unicast()` 등으로 Sink 생성
+- `emitNext(...)`로 Signal 명시적 전송
+
+#### 예시
+```java
+Sinks.Many<String> unicastSink = Sinks.many().unicast().onBackpressureBuffer();
+IntStream.range(1, 6).forEach(n -> {
+    new Thread(() -> {
+        unicastSink.emitNext(doTask(n), FAIL_FAST);
+    }).start();
+});
+```
+
+#### 특징
+- `emitNext()`는 **멀티스레드에서도 안전**
+- 총 **7개의 스레드** 사용 (Thread-0~4 + parallel-2 + parallel-1)
+- **스레드 안전성 보장**으로 병렬 환경에 적합
+
+### 결론 요약
+| 항목 | create() 방식 | Sinks 방식 |
+|------|----------------|-------------|
+| 사용 용도 | 간단한 Signal 처리 | 복잡한 병렬 환경 |
+| 스레드 안전성 | 낮음 | **높음** |
+| 사용 방식 | sink를 통해 emit | `emitNext()` 명시적 호출 |
+| 스레드 구성 | 단계별로 2~3개 | 동시성 많아지면 5개 이상 |
+
+### 참고
+- **단순 흐름 제어**에는 `create()` 사용
+- **멀티스레드 환경, 외부 이벤트 처리**에는 `Sinks` 사용 권장
 
 ## 유형
 - Sinks.One: 단일 값을 발행하고 완료하거나 에러를 발행할 수 있다.
