--- a/_posts/Algorithm/2023-04-26-programmers-388352.md
+++ b/_posts/Algorithm/2023-04-26-programmers-388352.md
@@ -15,6 +15,10 @@ tags:     Algorithm
 
 [https://school.programmers.co.kr/learn/courses/30/lessons/388352](https://school.programmers.co.kr/learn/courses/30/lessons/388352)
 
+- 모든 조합을 구한다.
+- 구한 조합을 모든 q의 경우의 수를 체크하고 맞으면 ++
+
+
 ```java
 import java.util.*;
 
