--- a/_posts/Spring/2023-08-19-Context.md
+++ b/_posts/Spring/2023-08-19-Context.md
@@ -19,7 +19,9 @@ tags:     Spring
 - Reactor Sequence 상에서 상태를 저장할 수 있고, 저장된 상태 값을 Operator 체인에서 공유해서 사용할 수 있는 인터페이스이다.
 - Context에 값을 저장하기 위해서는 contextWrite( )을 사용한다. 
 - Context에서 값을 읽어오기 위해서는 읽기 전용 뷰인 ContextView를 사용한다. 
-- ContextView는 Reactor Sequence에서 deferContextual( ) 또는 transformDeferredContextual( )을 통해서 제공된다.
+- ContextView는 Reactor Sequence에서 deferContextual() 또는 transformDeferredContextual()을 통해서 제공된다.
+  - Context에서 값만 꺼내 쓰면 deferContextual()
+  - Context에 따라 원래 체인을 바꾸고 싶으면 transformDeferredContextual()
 
 ### Reactor Sequence란?
 - Reactor에서 Sequence는 데이터 스트림 또는 데이터 흐름을 의미한다. 이 스트림은 비동기적으로 데이터를 방출하고, 처리하며, 종료되는 일련의 과정을 의미한다.
@@ -131,6 +133,10 @@ public class ContextAPIExample02 {
 ```
 
 ### 특징 실행
+- Context는 구독(Subscriber)마다 독립적으로 생성된다.
+- 즉, subscribe() 할 때마다 그 구독만을 위한 Context가 생긴다.
+- Context는 연산자 체인의 아래에서 위로 전달된다.
+- 같은 키가 중복되면, 가장 나중에 작성된 contextWrite() 값이 우선 적용된다.
 
 ```java
 /**
@@ -160,6 +166,11 @@ public class ContextFetureExample01 {
 }
 ```
 
+- Context는 Operator 체인의 아래에서 위로 전파된다.
+- 가장 마지막에 위치한 contextWrite()의 값이 최종 적용된다.
+- transformDeferredContextual() 시점엔 name이 아직 없어서 getOrDefault()로 기본값이 사용됨.
+- 만약 get()을 썼다면 NoSuchElementException이 났을 것.
+- Inner Sequence 안에서는 외부 Context 값을 읽을 수 있지만, 외부에서는 Inner Sequence 안의 Context를 읽을 수 없다.
 
 ```java
 /**
@@ -213,6 +224,13 @@ public class ContextFetureExample03 {
 }
 ```
 
+- **Inner Sequence(예: flatMap 내부)**에서는 바깥쪽 Context 값을 읽을 수 있다.
+- 하지만 바깥쪽 Sequence에서는 Inner Context 값을 읽을 수 없다.
+- `job`: `Software Engineer`는 Inner에서 등록 → Inner에서 접근 가능
+- `id`: `itVillage`은 Outer에서 등록 → Inner에서도 접근 가능
+- 하지만 Outer에서 `job`을 읽으려고 하면 X → NoSuchElementException 발생
+
+
 ```java
 /**
  * Context의 특징
@@ -239,6 +257,47 @@ public class ContextFetureExample04 {
             .subscribe(Logger::onNext);
 
         TimeUtils.sleep(100L);
+    }
+}
+```
+
+### Context 활용: 인증 토큰 전달)
+- `Context`는 인증 토큰처럼 **직교성(독립성)이 높은 정보 전달에 적합**하다.
+- `contextWrite()`는 **구독 직전에 위치해야 Operator 체인 전체에 전파**된다.
+- `deferContextual()`로 Context에서 값을 꺼내 사용할 수 있다.
+- 결과적으로, **비즈니스 로직(postBook)과 인증 정보가 분리**되어 코드가 깔끔해진다.
+
+
+```java
+@Slf4j
+public class Example11_8 {
+    public static final String HEADER_AUTH_TOKEN = "authToken";
+
+    public static void main(String[] args) {
+        Mono<String> mono = postBook(
+                Mono.just(new Book("abcd-1111-3533-2809", "Reactor's Bible", "Kevin"))
+        ).contextWrite(Context.of(HEADER_AUTH_TOKEN, "eyJhbGciOi...")); // Context에 토큰 저장
+
+        mono.subscribe(data -> log.info("# onNext: {}", data));
+    }
+
+    private static Mono<String> postBook(Mono<Book> book) {
+        return Mono.zip(
+                book,
+                Mono.deferContextual(ctx -> Mono.just(ctx.get(HEADER_AUTH_TOKEN)))
+        ).flatMap(tuple -> {
+            String response = "POST the book(" + tuple.getT1().getBookName() +
+                    "," + tuple.getT1().getAuthor() + ") with token: " + tuple.getT2();
+            return Mono.just(response); // HTTP POST 전송했다고 가정
+        });
+    }
+
+    @AllArgsConstructor
+    @Data
+    static class Book {
+        private String isbn;
+        private String bookName;
+        private String author;
     }
 }
 ```
