--- a/_posts/Algorithm/2023-04-26-programmers-388352.md
+++ b/_posts/Algorithm/2023-04-26-programmers-388352.md
@@ -1,12 +1,12 @@
 ---
 layout:   post
-title:    "조이스틱"
-subtitle: "조이스틱"
+title:    "비밀 코드 해독"
+subtitle: "비밀 코드 해독"
 category: Algorithm
 more_posts: posts.md
 tags:     Algorithm
 ---
-# [programmers] 조이스틱
+# [programmers] 비밀 코드 해독
 
 <!--more-->
 <!-- Table of contents -->
