--- a/_posts/Spring/2023-08-12-Reactive.md
+++ b/_posts/Spring/2023-08-12-Reactive.md
@@ -22,7 +22,7 @@ tags:     Spring
 ## 리액티브 선언문
 > 리액티브 선언문은 이랙티브라는 용어의 의미를 올바르게 정의하기 위해 노력하는 사람들이 만든 리액티브 시스템 구축을 위한 일종의 설계 원칙
 
-![img.png](img.png)
+![img.png](/assets/img/spring/reactor_4/img.png)
 
 | 항목         |간단 정의|예시 또는 관련 특성|
 |------------|---|---|
