--- a/_posts/Spring/2023-08-13-Reactor.md
+++ b/_posts/Spring/2023-08-13-Reactor.md
@@ -189,7 +189,7 @@ public class FluxExample04 {
 
 ### 마블 다이어그램 구성
 
-![img_1.png](img_1.png)
+![img_1.png](/assets/img/spring/reactor_4/img_1.png)
 
 - **①**: Publisher가 데이터를 emit하는 타임라인
 - **②**: emit된 데이터
@@ -227,7 +227,7 @@ public class FluxExample04 {
 
 ### Mono 마블 다이어그램
 
-![img_4.png](img_4.png)
+![img_4.png](/assets/img/spring/reactor_4/img_4.png)
 
 - Mono는 단 하나의 데이터를 emit하거나 완료(onComplete)만 전달하는 Publisher이다.
 - RxJava의 Maybe, Single과 비교할 수 있다.
@@ -274,7 +274,7 @@ public class Example6_2 {
 
 ### Mono 활용 예제 (HTTP 호출)
 
-![img_5.png](img_5.png)
+![img_5.png](/assets/img/spring/reactor_4/img_5.png)
 
 ```java
 public class Example6_3 {
@@ -364,7 +364,7 @@ public class Example6_5 {
 
 ### Flux 활용 예제 (Mono를 연결해서 Flux로)
 
-![img_2.png](img_2.png)
+![img_2.png](/assets/img/spring/reactor_4/img_2.png)
 
 ```java
 public class Example6_6 {
