--- a/_posts/Spring/2023-08-19-Context.md
+++ b/_posts/Spring/2023-08-19-Context.md
@@ -310,10 +310,17 @@ public class Example11_8 {
 
 ### Debugging 용어
 - stacktrace : 호출된 메서드에 대한 Stack Frame에 대한 리포트
-- assembly : 새로운 Flux가 선언된 지점
+- `assembly` : Mono 또는 Flux가 선언된 지점
 - traceback : 
   - 실패한 operator의 stacktrace를 캡처한 정보
   - suppressed exception 형태로 original stacktrace에 추가된다.
+
+### 프로덕션 환경에서의 디버깅 설정
+> Reactor는 프로덕션 환경에서도 스택 트레이스 캡쳐 비용 없이 디버깅 정보를 제공하기 위해 별도 Java 에이전트(ReactorDebugAgent)를 지원한다.  
+이를 사용하려면 reactor-tools 의존성을 추가해야 하며,
+spring.reactor.debug-agent.enabled=true로 설정하면 애플리케이션 시작 시 자동으로 ReactorDebugAgent가 활성화된다.  
+만약 false로 설정하면, 직접 ReactorDebugAgent.init()을 호출해야 한다.  
+Spring Boot에서는 기본값이 true로 설정되어 있다.  
 
 ### 1) Debug 모드
 - Debug 모드 시, Operator의 stacktrace capturing을 통해 디버깅에 필요한 정보를 측정한다.
@@ -387,7 +394,7 @@ public class DebugModeExample04 {
 ![img_7.png](/assets/img/spring/reactor_3/img_7.png)
 
 ### 2) checkpoint
-- 특정 Operator 체인 내에서만 assembly stacktrace를 캡쳐한다. 
+- 특정 Operator 체인 내에서만 assembly stacktrace를 캡쳐한다.
 - checkpoint(description)를 사용하면 에러 발생 시, chpeckpoint(description)를 추가한 지점의 assembly stacktrace를 생략하고 description을 통해 에러 발생 지점을 예상할 수 있다. 
 - checkpoint(description, true) = checkpoint( ) + checkpoint(“description”) 
   - 에러 발생 시, 고유한 식별자 등의 description과  assembly stack trace(traceback)를 모두 출력한다.
@@ -411,6 +418,7 @@ public class CheckpointExample01 {
 /**
  * checkpoint() Operator 를 사용한 예제
  * - 발생한 에러는 Operator 체인에 전파가 되기때문에 에러가 전파된 지점의 checkpoint()에서 확인할 수 있다.
+ * - 직접적으로 발생한 지점인지 아니면 에러가 전파된 지점인지 알기는 어려울 수 있다. 이럴 경우 다음 예제 처럼 추가로 checkpoint()를 추가해 확인 가능하다.
  * - traceback 은 실제 에러가 발생한 assembly 지점 또는 에러가 전파된 assembly 지점의 traceback 즉,
  *   실제 checkpoint()를 추가한 지점의 traceback 이 추가된다.
  */
@@ -517,7 +525,8 @@ public class CheckpointExample07 {
 ```
 
 ### 3) log
-- Flux 또는 Mono에서 발생하는 signal event를 출력해준다(onNext, onError, onComplete, subscriptions, cancellations, requests)
+- Flux 또는 Mono에서 발생하는 signal event를 출력해준다.(onNext, onError, onComplete, subscriptions, cancellations, requests)
+  - Reactor Sequence의 동작을 로그로 출력.
 - 여러개의 log()를 사용할 수 있으며, Operator 마다 전파되는 singal event를 확인할 수 있다.
 - Custom Category를 입력해서 Operator 마다 출력되는 signal event를 구분할 수 있다.
 - 에러 발생 시, stacktrace도 출력해준다.
@@ -526,6 +535,8 @@ public class CheckpointExample07 {
 ```java
 /**
  * log() operator를 사용한 예제
+ * melon 이라는 문자열을 emit 했지만 두 번째 map() 이후의 어떤 지점에서 melon 문자열을 처리하는 중에 에러가 발생했음을 의미
+ * .log("Fruit.Substring", Level.FINE) 과 같이 바꿔서 코스 실행시 로그 레벨이 모두 DEBUG로 바뀌고 "Fruit.Substring" 카테고리까지 표히새 준다.
  */
 public class LogOperatorExample01 {
     public static Map<String, String> fruits = new HashMap<>();
@@ -549,6 +560,8 @@ public class LogOperatorExample01 {
 ```
 
 ![img_8.png](/assets/img/spring/reactor_3/img_8.png)
+
+![img_7.png](/assets/img/spring/reactor_4/img_7.png)
 
 ```java
 /**
