--- a/_posts/Algorithm/2023-04-29-softeer-462352.md
+++ b/_posts/Algorithm/2023-04-29-softeer-462352.md
@@ -6,7 +6,7 @@ category: Algorithm
 more_posts: posts.md
 tags:     Algorithm
 ---
-# [programmers] CPTI
+# [softeer] CPTI
 
 <!--more-->
 <!-- Table of contents -->
