--- a/_posts/Algorithm/2023-05-02-softeer-462882.md
+++ b/_posts/Algorithm/2023-05-02-softeer-462882.md
@@ -17,79 +17,73 @@ tags:     Algorithm
 
 
 ```java
+import java.io.*;
 import java.util.*;
 
 public class Main {
-    static double totalProbability = 0.0;
-    static double successfulProbability = 0.0;
-    static int[] power = new int[4];
-    static int[][] matches = {
-            {0, 1},
-            {0, 2},
-            {0, 3},
-            {1, 2},
-            {1, 3},
-            {2, 3}
-    };
+
+    static final int MAX = 5002;
+    static Map<Integer,Map<Integer,String>> m = new HashMap<>();
+    static boolean[] visited;
+    static int result;
+    static String S;
+    static int[][] lcs = new int[MAX][MAX];
 
     public static void main(String[] args) {
         Scanner sc = new Scanner(System.in);
-        for (int i = 0; i < 4; i++) {
-            power[i] = sc.nextInt();
+
+        int N = sc.nextInt();
+        int M = sc.nextInt();
+        S = sc.next();
+        visited = new boolean[N + 1];
+
+        for (int i = 0; i < N - 1; i++) {
+            int n1 = sc.nextInt();
+            int n2 = sc.nextInt();
+            String text = sc.next();
+
+            m.computeIfAbsent(n1, k -> new HashMap<>()).put(n2, text);
+            m.computeIfAbsent(n2, k -> new HashMap<>()).put(n1, text);
         }
-        dfs(0, new int[4], 1.0);
-        System.out.printf("%.3f\n", successfulProbability * 100);
+
+        visited[1] = true;
+        dfs(1, 0);
+
+        System.out.println(result);
     }
 
-    static void dfs(int matchIndex, int[] scores, double prob) {
-        if (matchIndex == 6) {
-            totalProbability += prob;
-            if (isTopTwo(scores)) {
-                successfulProbability += prob;
+    static void dfs(int idx, int depth) {
+        boolean isNext = false;
+        Map<Integer, String> innerMap = m.get(idx);
+        for (Integer k : innerMap.keySet()) {
+            if (!visited[k]) {
+                isNext = true;
+                visited[k] = true;
+
+                // 문자 하나만 있기 때문에 char 뽑기
+                char c = innerMap.get(k).charAt(0);
+
+                // LCS 누적 계산
+                for (int j = 0; j < S.length(); j++) {
+                    char sj = S.charAt(j);
+                    lcs[depth + 1][j + 1] = Math.max(
+                            lcs[depth][j] + ((c == sj) ? 1 : 0),
+                            Math.max(lcs[depth + 1][j], lcs[depth][j + 1])
+                    );
+                }
+
+                dfs(k, depth + 1);
             }
-            return;
         }
 
-        int a = matches[matchIndex][0];
-        int b = matches[matchIndex][1];
-        double total = 5.0 * (power[a] + power[b]);
-        double winA = 4.0 * power[a] / total;
-        double winB = 4.0 * power[b] / total;
-        double draw = 1.0 / 5.0;
-
-        // A wins
-        scores[a] += 3;
-        dfs(matchIndex + 1, scores, prob * winA);
-        scores[a] -= 3;
-
-        // B wins
-        scores[b] += 3;
-        dfs(matchIndex + 1, scores, prob * winB);
-        scores[b] -= 3;
-
-        // Draw
-        scores[a] += 1;
-        scores[b] += 1;
-        dfs(matchIndex + 1, scores, prob * draw);
-        scores[a] -= 1;
-        scores[b] -= 1;
-    }
-
-    static boolean isTopTwo(int[] scores) {
-        List<Integer> list = new ArrayList<>();
-        for (int i = 0; i < 4; i++) {
-            list.add(scores[i]);
+        if (!isNext) {
+            for (int j = 0; j <= S.length(); j++) {
+                result = Math.max(result, lcs[depth][j]);
+            }
         }
-        list.sort(Collections.reverseOrder());
-        int first = list.get(0);
-        int second = list.get(1);
-        int count = 0;
-        if (scores[0] == first || scores[0] == second) {
-            count++;
-        }
-        return count > 0;
     }
 }
+
 
 
 ```
