--- a/_posts/Algorithm/2023-05-07-programmers-340211.md
+++ b/_posts/Algorithm/2023-05-07-programmers-340211.md
@@ -19,58 +19,43 @@ tags:     Algorithm
 ```java
 import java.util.*;
 
-public class Solution {
+class Solution {
     public int solution(int[][] points, int[][] routes) {
-        Map<Integer, int[]> pointMap = new HashMap<>();
-        for (int i = 0; i < points.length; i++) {
-            pointMap.put(i + 1, points[i]);
-        }
+        int answer = 0;
+        Map<String,Integer> visited = new HashMap<>();
 
-        Map<String, Integer> positionTimeMap = new HashMap<>();
-        int collisionCount = 0;
+        for(int[] route : routes){
+            int cnt = 1;
+            int[] robot = new int[2];
+            robot[0] = points[route[0]-1][0];
+            robot[1] = points[route[0]-1][1];
+            String key = robot[0]+"_"+robot[1]+"_"+cnt;
+            visited.put( key, visited.getOrDefault(key, 0)+1);
 
-        for (int[] route : routes) {
-            int time = 0;
-            int[] current = pointMap.get(route[0]);
+            if(visited.get(key) == 2) answer++;
 
-            // 시작 위치 기록
-            String key = time + "," + current[0] + "," + current[1];
-            positionTimeMap.put(key, positionTimeMap.getOrDefault(key, 0) + 1);
+            for(int i = 1 ; i < route.length ; i++){
+                int[] ePoint = points[route[i]-1];
+                while(true){
+                    cnt++;
+                    if(robot[0] < ePoint[0]) robot[0]++;
+                    else if(robot[0] > ePoint[0]) robot[0]--;
+                    else if(robot[1] < ePoint[1]) robot[1]++;
+                    else if(robot[1] > ePoint[1]) robot[1]--;
 
-            for (int i = 1; i < route.length; i++) {
-                int[] next = pointMap.get(route[i]);
-                int r = current[0];
-                int c = current[1];
+                    String tempKey = robot[0]+"_"+robot[1]+"_"+cnt;
+                    visited.put( tempKey, visited.getOrDefault(tempKey, 0)+1);
 
-                // r 좌표 이동
-                while (r != next[0]) {
-                    r += (next[0] > r) ? 1 : -1;
-                    time++;
-                    key = time + "," + r + "," + c;
-                    positionTimeMap.put(key, positionTimeMap.getOrDefault(key, 0) + 1);
+                    if(visited.get(tempKey) == 2) answer++;
+
+                    if(robot[0] == ePoint[0] && robot[1] == ePoint[1]) break;
                 }
-
-                // c 좌표 이동
-                while (c != next[1]) {
-                    c += (next[1] > c) ? 1 : -1;
-                    time++;
-                    key = time + "," + r + "," + c;
-                    positionTimeMap.put(key, positionTimeMap.getOrDefault(key, 0) + 1);
-                }
-
-                current = next;
             }
+
         }
 
-        for (int count : positionTimeMap.values()) {
-            if (count > 1) {
-                collisionCount++;
-            }
-        }
-
-        return collisionCount;
+        return answer;
     }
 }
-
 
 ```
