--- a/_posts/Algorithm/2023-05-14-programmers-12909.md
+++ b/_posts/Algorithm/2023-05-14-programmers-12909.md
@@ -1,19 +1,19 @@
 ---
 layout:   post
-title:    "최댓값과 최솟값"
-subtitle: "최댓값과 최솟값"
+title:    "올바른 괄호"
+subtitle: "올바른 괄호"
 category: Algorithm
 more_posts: posts.md
 tags:     Algorithm
 ---
-# [programmers] 최댓값과 최솟값
+# [programmers] 올바른 괄호
 
 <!--more-->
 <!-- Table of contents -->
 * this unordered seed list will be replaced by the toc
 {:toc}
 
-[https://school.programmers.co.kr/learn/courses/30/lessons/12939](https://school.programmers.co.kr/learn/courses/30/lessons/12939)
+[https://school.programmers.co.kr/learn/courses/30/lessons/12909](https://school.programmers.co.kr/learn/courses/30/lessons/12909)
 
 
 ```java
