--- a/_posts/Algorithm/2023-05-26-programmers-12911.md
+++ b/_posts/Algorithm/2023-05-26-programmers-12911.md
@@ -1,12 +1,12 @@
 ---
 layout:   post
-title:    "이진 변환 반복하기"
-subtitle: "이진 변환 반복하기"
+title:    "다음 큰 숫자"
+subtitle: "다음 큰 숫자"
 category: Algorithm
 more_posts: posts.md
 tags:     Algorithm
 ---
-# [programmers][X] 이진 변환 반복하기
+# [programmers][X] 다음 큰 숫자
 
 <!--more-->
 <!-- Table of contents -->
