--- a/_posts/Algorithm/2023-05-24-programmers-12949.md
+++ b/_posts/Algorithm/2023-05-24-programmers-12949.md
@@ -6,7 +6,7 @@ category: Algorithm
 more_posts: posts.md
 tags:     Algorithm
 ---
-# [programmers] 행렬의 곱셈
+# [programmers][X] 행렬의 곱셈
 
 <!--more-->
 <!-- Table of contents -->
@@ -15,6 +15,8 @@ tags:     Algorithm
 
 [https://school.programmers.co.kr/learn/courses/30/lessons/12949](https://school.programmers.co.kr/learn/courses/30/lessons/12949)
 
+
+![img.png](/assets/img/algorithm/img-34.png)
 
 ```java
 class Solution {
