--- a/_posts/Jpa/2021-03-15-Query.md
+++ b/_posts/Jpa/2021-03-15-Query.md
@@ -241,6 +241,24 @@ select NULLIF(m.username, '관리자') from Member m
 - 하이버네이트는 사용전 방언에 추가해야 한다.
   - 사용하는 DB 방언을 상속받고, 사용자 정의 함수를 등록한 다.
 
+```java
+public class MyH2Dialect extends H2Dialect
+{
+    public MyH2Dialect()
+    {
+        registerFunction("group_concat",new StandardSQLFunction("group_concat", StandardBasicTypes.STRING));
+    }
+}
+```
+
+```
+spring:
+  jpa:
+    properties:
+      hibernate:
+        dialect: com.example.MySQLCustomDialect
+```
+
 ``` java
 select function('group_concat', i.name) from Item i
 ```
