--- a/_posts/Jpa/2021-03-15-Query.md
+++ b/_posts/Jpa/2021-03-15-Query.md
@@ -264,7 +264,7 @@ select function('group_concat', i.name) from Item i
 ```
 
 #### 단일 값 연관 경로
-> 묵시적 내부 조인(inner join) 발생, 탐색O (묵시적 조인 : join 키워드를 사용 안함 )
+> 연관관계 호출시 묵시적 내부 조인(inner join) 발생, 탐색O (묵시적 조인 : join 키워드를 사용 안함 )
 
 ``` java
 // JPQL: 
