--- a/_posts/Algorithm/2023-04-06-programmers-12936.md
+++ b/_posts/Algorithm/2023-04-06-programmers-12936.md
@@ -16,7 +16,8 @@ tags:     Algorithm
 [https://school.programmers.co.kr/learn/courses/30/lessons/12936](https://school.programmers.co.kr/learn/courses/30/lessons/12936)
 
 > `int index = (int)(k / factorial[n-1-i]);` 이부분에 대한 이해가 한참 안되었다. 핵심은 `전체를 나누는 게 아니라, 해당 자리에서 선택지를 몇 개씩 묶어서 나뉘는지에 따라 나눔`이다.  
-> 즉, n = 4, k = 14일 경우 앞자리가 몇번씩 반복되는지 파악하는 것이 중요하다.
+> 즉, n = 4, k = 14일 경우 앞자리가 몇번씩 반복되는지 파악하는 것이 중요하다.  
+> 남은 순열들을 몇 묶음(block) 단위로 나눴을 때, k가 몇 번째 묶음에 속하는지
 
 ex) 아래와 같을때 6번씩 나온다.
 
