--- a/_posts/Java/2019-02-28-gc.md
+++ b/_posts/Java/2019-02-28-gc.md
@@ -128,7 +128,7 @@ s1 == s3 // false
 
 ## `OutOfMemory` 에러
 
-### Heqp 영역
+### Heap 영역
 > `java.lang.OutOfMemoryError: Java heap space`
 
 발생 원인  
@@ -140,17 +140,36 @@ s1 == s3 // false
 - 메모리 프로파일러(JProfiler, VisualVM 등)를 사용하여 메모리 사용량을 분석
 
 ### PermGen(Permanent Generation) / Metaspace 영역
-> Java7 이하 : java.lang.OutOfMemoryError: PermGen space  
-> Java8 이상 : java.lang.OutOfMemoryError: Metaspace
+> Java7 이하 : `java.lang.OutOfMemoryError: PermGen space`  
+> Java8 이상 : `java.lang.OutOfMemoryError: Metaspace`
 
 발생 원인  
 - Java7 이하 : 클래스 로딩이 너무 많거나, 동적으로 많은 클래스가 생성/언로딩되는 경우
 - Java8 이상 : 기본적으로 OS 메모리를 사용하며 제한 없음, 하지만 `MaxMetaspaceSize` 설정을 할 경우 제한을 초과하거나 클래스 로더 누수가 발생 하는 경우(대부분 운영에선 `size`를 제한 한다.)
 
-해결책
+해결책  
 - PermGen / Metaspace 크기 설정
   - PermGen: -XX:MaxPermSize
   - Metaspace: -XX:MaxMetaspaceSize
 - 클래스 로더 누수 확인
   - 웹 애플리케이션의 잦은 재배포 시 이전 버전의 클래스 로더가 해제되지 않고 남아있는 경우 발생할 수 있다. 애플리케이션 서버 설정을 확인하고 재배포 전략을 검토할 수 있다.
 - 동적으로 생성되는 클래스 최적화.
+
+### Direct Memory 영역
+> java.lang.OutOfMemoryError: Direct buffer memory
+
+발생 원인  
+> OS의 메모리를 직접 빌려쓰는 방식으로 속도가 빠르고 복사 과정 없이 바로 읽고 쓰기 때문에 성능이 훨씬 좋다.  
+> 하지만 참조 주소를 갖는 `DirectByteBuffer` 객체를 힙에 생성하게 되며 GC에서 객체 공간이 작게 판단되어 실제 OS의 메모리가 많이 사용될 경우 부족해지는 현상이 발생 할 수 있다.(OS 메모리가 터짐)
+
+해결책  
+- Direct Memory 크기 조절
+  - `-XX:MaxDirectMemorySize` 파라미터를 사용하여 크기 설정. (디폴트 값은 힙 최대 크기와 동일)
+- Direct Memory 누수 확인
+  - 다이렉트 메모리에서 발생한 메모리 오버플로의 두드러진 특징은 `힙 덤프파일에서는 이상한 점을 찾을수 없다`는 것이다.
+    - 덤프파일이 매우 작거나 직/간접 적으로 다이렉트 메모리를 사용했다면(보통 NIO) 다이렉트 메모리에서 원인을 찾아봐야 한다.
+  - 할당된 `Direct Buffer`가 제대로 해제되지 않는 경우 발생할 수 있고, Unsafe 관련 코드를(Unsafe::allocateMemory() 등) 사용하는 경우에 주의해야 한다.
+
+### Thread 영역
+
+### GC Overhead Limit Exceeded
