--- a/_posts/Java/2019-02-28-gc.md
+++ b/_posts/Java/2019-02-28-gc.md
@@ -25,7 +25,7 @@ tags:     Java
  | 4. PC 레지스터 (Program Counter)         |현재 실행 중인 JVM 명령 주소(PC)를 저장| 각 쓰레드별 독립적 |
  | 5. 네이티브 메서드 스택 (Native Method Stack) |네이티브 메서드 호출 정보 저장| 각 쓰레드별 독립적 |
 
-![img.png](img.png)
+![img.png](/assets/img/java/thread/img4/img.png)
 
 ### 메소드 영역
 > 붕어빵처럼 메소드의 틀이 있는 영역으로 `자바8`부터 `Heap > Permanent Generation` 에서 `Native > Metaspace` 영역이 이동되었다.  
@@ -171,5 +171,27 @@ s1 == s3 // false
   - 할당된 `Direct Buffer`가 제대로 해제되지 않는 경우 발생할 수 있고, Unsafe 관련 코드를(Unsafe::allocateMemory() 등) 사용하는 경우에 주의해야 한다.
 
 ### Thread 영역
+> java.lang.StackOverflowError  
+> java.lang.OutOfMemoryError: unable to create new native thread  
+
+발생 원인  
+- `Stack Overflow` : 재귀 호출, 스레드 스택 크기가 부족할 때
+- `Native Thread Creation Failed` : OS 자원 부족 또는 JVM이 할당 가능한 가상 메모리 공간이 부족할 때
+
+해결책  
+- `Stack Overflow` : 재귀 호출 수정, `-Xss` 스레드 스택 크기 조정
+- `Native Thread Creation Failed` :
+  - 애플리케이션 스레드 수 조절
+  - 운영체제에서 프로세스당 허용되는 스레드 수 조절 (ulimit -u 등)
+  - JVM이 사용할 수 있는 가상 메모리 공간을 더 확보
 
 ### GC Overhead Limit Exceeded
+> java.lang.OutOfMemoryError: GC overhead limit exceeded
+
+발생 원인
+- GC에 많은 시간을 소비하고 있음에도, 거의 회수되지 않는 경우(더 이상 회수할 메모리 없음. GC만 수행하고 있는 상황)
+
+해결책
+- 힙메모리 증가
+- 메모리 누수 확인
+- GC 알고리즘 변경(G1GC, CMS 등), GC 파라미터를 조정하여 GC 효율을 높힌다.
